# euvd

./: .gitignore  .openapi-generator-ignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  api.yaml  modify.py  update.sh
.openapi-generator/: FILES
api/: api.yaml  generate.sh  modify.py
docs/: Advisory.md  AdvisoryAdvisoryProductInner.md  AdvisoryEnisaIdAdvisoriesInner.md  AdvisorySource.md  AdvisoryVulnerabilityAdvisoryInner.md  DefaultApi.md  EnisaIdVulnerabilityEntry.md  NestedProduct.md  NestedVendor.md  NestedVulnerability.md  NestedVulnerabilityAllOfVulnerabilityProduct.md  NestedVulnerabilityAllOfVulnerabilityVendor.md  NestedVulnerabilityVulnerabilityProductInner.md  NestedVulnerabilityVulnerabilityVendorInner.md  Vulnerabilities.md  Vulnerability.md  VulnerabilityAllOfEnisaIdProduct.md  VulnerabilityAllOfEnisaIdVendor.md  VulnerabilityAllOfProduct.md  VulnerabilityBase.md  VulnerabilityEnisaIdProductInner.md  VulnerabilityEnisaIdProductInnerProduct.md  VulnerabilityEnisaIdVendorInner.md  VulnerabilityWithComponents.md  VulnerabilityWithRelations.md
src/apis/: configuration.rs  default_api.rs
src/models/: advisory.rs  advisory_advisory_product_inner.rs  advisory_enisa_id_advisories_inner.rs  advisory_source.rs  advisory_vulnerability_advisory_inner.rs  enisa_id_vulnerability_entry.rs  mod.rs  nested_product.rs  nested_vendor.rs  nested_vulnerability.rs  nested_vulnerability_all_of_vulnerability_product.rs  nested_vulnerability_all_of_vulnerability_vendor.rs  nested_vulnerability_vulnerability_product_inner.rs  vulnerability.rs  (+11 more)
tests/: integration.rs
